[tool.poetry]
name = "rdflib-ocdm"
version = "1.0.7"
description = ""
authors = ["Arcangelo Massari <arcangelo.massari@unibo.it>"]
license = "ISC"
readme = "README.md"
packages = [{include = "rdflib_ocdm"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
oc-ocdm = "^9.2.2"
sparqlwrapper = "^2.0.0"
redis = "^4.5.5"
rdflib = "^7.4.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.3"
isort = "^6.0.1"
fakeredis = "^2.29.0"
reuse = {version = ">=6.2.0", python = ">=3.10"}
genbadge = {extras = ["coverage"], version = "^1.1.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
