[project]
name = "rdflib-ocdm"
version = "1.0.7"
description = ""
authors = [{name = "Arcangelo Massari", email = "arcangelo.massari@unibo.it"}]
license = "ISC"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "oc-ocdm>=9.2.2,<10",
    "rdflib>=7.4.0,<8",
    "redis>=4.5.5,<5",
    "sparqlwrapper>=2.0.0,<3",
]

[dependency-groups]
dev = [
    "coverage>=7.2.3,<8",
    "fakeredis>=2.29.0,<3",
    "genbadge[coverage]>=1.1.3,<2",
    "isort>=6.0.1,<7",
    "pyright>=1.1.409",
    "reuse>=6.2.0",
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
